--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,15 +30,14 @@ requirements:
 test:
   requires:
     - pip
+    - pytest
     - jupyterlab >=3.1,<4
     - m2-grep  # [win]
   imports:
     - ipytone
   commands:
-    - test -f ${PREFIX}/share/jupyter/nbextensions/ipytone/extension.js                             # [unix]
-    - test -f ${PREFIX}/share/jupyter/nbextensions/ipytone/index.js                                 # [unix]
-    - test -f ${PREFIX}/share/jupyter/labextensions/ipytone/package.json                            # [unix]
     - pip check
+    - pytest -vv --pyargs ipytone
     # print them all for debugging
     - jupyter labextension list
     # write out lists to grep
